@@ -5,6 +5,12 @@
 This document provides a high-level view of the changes to the {project-name} by release.
 For a detailed view of what has changed, refer to the {url-repo}/commits/main[commit history] on GitHub.
 
+== Unreleased
+
+Bug Fixes::
+
+* short-circuit formatted_text routine and log error if fragments in first line cannot fit on a new page
+
 == 2.0.0 (2022-05-18) - @mojavelinux
 
 Improvements::
